@@ -41,8 +41,8 @@
 /* Define the version number so folks can check against it */
 #define TC_VERSION_MAJOR  2
 #define TC_VERSION_MINOR  5
-#define TC_VERSION_PATCH  ".90"
-#define TC_VERSION_STRING "gperftools 2.5.90"
+#define TC_VERSION_PATCH  ".91"
+#define TC_VERSION_STRING "gperftools 2.5.91"
 
 #ifndef PERFTOOLS_THROW
 
